Address various layout/spacing issues

--- a/client/scss/components/_footer.scss
+++ b/client/scss/components/_footer.scss
@@ -1,6 +1,5 @@
 .footer {
   padding-top: $vertical-space-unit*3;
-  background: color('dark-black');
   color: color('white');
 }
 
